[package]
name = "importenv"
version = "0.0.6"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/VHSgunzo/importenv"
description = "Launching an executable file with environment variables from a specific process id"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
strip = "symbols"
codegen-units = 1

[dependencies]
chrono = "*"
nix = "*"
