#Enable unstable feature in Cargo
cargo-features = ["profile-rustflags"]

[package]
name = "importenv"
version = "0.0.6"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/VHSgunzo/importenv"
description = "Launching an executable file with environment variables from a specific process id"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
strip = true
codegen-units = 1
rustflags = ["-C", "target-feature=+crt-static", "-C", "strip=symbols"]

[dependencies]
chrono = "*"
nix = { version = "*", features = ["process"] }

[unstable]
build-std = ["std", "panic_abort"]
build-std-features = ["panic_immediate_abort"]