[package]
name = "importenv"
version = "0.0.7"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/VHSgunzo/importenv"
description = "Launching an executable file with environment variables from a specific process id"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
strip = "symbols"
debug  = false
codegen-units = 1

[profile.dev]
panic = "abort"
opt-level = 0

[dependencies]
nix = { version = "0.29.0", features = ["process"] }